TUP-4199: fix the problems which caused by TDKN-35.